@@ -699,6 +699,11 @@
 	* semantics.c (finish_decltype_type): Call
 	instantiate_non_dependent_expr_sfinae on the expression.
 
+2020-05-15  Jeff Chapman II  <jchapman@lock3software.com>
+
+	* name-lookup.c (push_namespace): Fix slot invalidation related
+	segfault when compiling with modules enabled.
+
 2020-05-15  Patrick Palka  <ppalka@redhat.com>
 
 	Revert:
